--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,41 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.2"
+assetDelivery = "2.2.2"
+browser = "1.8.0"
+codeview = "1.3.9"
+ambilwarna = "2.0.1"
+featureDelivery = "2.1.0"
+glide = "4.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+lottie = "6.5.0"
 material = "1.12.0"
-activity = "1.9.1"
+activity = "1.9.2"
 constraintlayout = "2.1.4"
+permissionx = "1.8.0"
+review = "2.0.1"
 
 [libraries]
+ambilwarna = { module = "com.github.yukuku:ambilwarna", version.ref = "ambilwarna" }
+app-update = { module = "com.google.android.play:app-update", version.ref = "featureDelivery" }
+asset-delivery = { module = "com.google.android.play:asset-delivery", version.ref = "assetDelivery" }
+browser = { module = "androidx.browser:browser", version.ref = "browser" }
+codeview = { module = "io.github.amrdeveloper:codeview", version.ref = "codeview" }
+compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+feature-delivery = { module = "com.google.android.play:feature-delivery", version.ref = "featureDelivery" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+permissionx = { module = "com.guolindev.permissionx:permissionx", version.ref = "permissionx" }
+review = { module = "com.google.android.play:review", version.ref = "review" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
